// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortIcon should render a Down icon if order is desc 1`] = `
<styled.span
  sortOrder="desc"
>
  <Themed(Styled(withStrippedProps(Component)))
    sortOrder="desc"
  />
</styled.span>
`;

exports[`SortIcon should render a Down icon if order is null 1`] = `
<styled.span
  sortOrder={null}
>
  <Themed(Styled(withStrippedProps(Component)))
    sortOrder={null}
  />
</styled.span>
`;

exports[`SortIcon should render an Up icon if order is asc 1`] = `
<styled.span
  sortOrder="asc"
>
  <Themed(Styled(withStrippedProps(Component)))
    sortOrder="asc"
  />
</styled.span>
`;
